# ThreatDeck

./: .gitignore  Cargo.toml  README.md  SPEC.md  TUI_DESIGN.md  demo-seed.sh  demo.tape  plan.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-24-cached-articles-design.md
docs/superpowers/plans/: 2026-04-24-cached-articles.md
src/: ai.rs  alert.rs  app.rs  article.rs  catalog-updates.sql  config.rs  db.rs  keyword.rs  main.rs  notify.rs  scheduler.rs  schema.sql  seed.sql  tag.rs  template.rs  theme.rs  types.rs
src/feed/: api.rs  mod.rs  onion.rs  rss.rs  utils.rs  web.rs
src/ui/: alerts.rs  articles.rs  dashboard.rs  feeds.rs  keywords.rs  list.rs  logs.rs  mod.rs  settings.rs  tags.rs  utils.rs
