[package]
name = "ThreatDeck"
version = "0.1.0"
edition = "2021"
description = "Terminal-based threat intelligence monitoring and alerting platform"
license = "MIT"
repository = "https://github.com/gripebomb/ThreatDeck"
keywords = ["threat-intelligence", "tui", "security", "monitoring", "alerts"]
categories = ["command-line-utilities", "security", "tui", "CTI", "terminal-based"]
authors = ["gripebomb"]
exclude = ["target/", ".git/"]

[[bin]]
name = "ThreatDeck"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = { version = "0.39", features = ["serialize"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
ureq = { version = "2", features = ["json", "charset", "socks-proxy"] }
serde_json = "1"
jsonpath_lib = "0.3"
regex = "1"
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "smtp-transport", "rustls-tls", "tokio1-rustls-tls", "builder", "hostname", "pool"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
scraper = "0.22"
atom_syndication = "0.12"
rss = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
